@@ -4,6 +4,7 @@ New features:
 ..F....... [ZBX-12809] implemented overlay dialog centering using javascript (miks)
 
 Bug fixes:
+........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
 ....I..... [ZBX-12895] improved performance of DB patch for updating data in the alerts table (Sergejs)
 ........S. [ZBX-12971] fixed possibility of host availability being stuck in unknown state when monitoring though proxy (vso)
 .......P.. [ZBX-12971] fixed Zabbix proxy not to send same host availability more than once (vso)
@@ -398,6 +399,7 @@ Changes for 3.2.11rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
 ........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
 .......P.. [ZBX-12117] fixed proxy passing zeros to history export modules instead of actual numeric values (gleb)
 ..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)
